# LLM-Pruner

./: llama3.py  pyproject.toml  qwen2.py  sweep_for_rap.py
LLMPruner/datasets/: example_samples.py  ppl_dataset.py
rap_baseline_scripts/: README.md  eval_downstream.py  eval_ppl.py  measure_memory_worker.py  sweep_scenarios.py
