[project]
name = "llm-pruner"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers>=4.28.1,<4.40.0",
    "datasets",
    "sentencepiece",
    "accelerate",
    "protobuf",
    "lm-eval>=0.4.11",
    "jieba>=0.42.1",
    "fuzzywuzzy>=0.18.0",
    "rouge>=1.0.1",
    "wonderwords>=3.0.1",
]
